<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date_of_exam" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_of_exam" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editDateOfExam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTimeOfExam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:inputType="textPersonName" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:text="@string/killometers" />

        <EditText
            android:id="@+id/editKillometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:ems="10"

            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diagnosis" />

        <EditText
            android:id="@+id/editDiagnosis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:text="@string/health_status" />

        <EditText
            android:id="@+id/editHealthStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minLines="4" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:text="@string/hand_sign" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:background="@drawable/layout_border">
            <ImageView
                android:id="@+id/signView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>