<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">
<ScrollView
    android:id="@+id/activity_new_patient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/appbar_padding"
    android:layout_weight="1"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.addeditpatient.PatientDoctorDocumentFragment"
        tools:ignore="MissingDefaultResource">


        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medicals_1"
            android:textColor="?attr/editTextColor"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/editMedikament1"
            style="@style/Widget.AppCompat.EditText.ConsulMedicsEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_edit_height"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:padding="@dimen/appbar_padding_top"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:text="@string/medicals_2"
            android:textColor="?attr/editTextColor"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/editMedikament2"
            style="@style/Widget.AppCompat.EditText.ConsulMedicsEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_edit_height"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:padding="@dimen/appbar_padding_top"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:text="@string/medicals_3"
            android:textColor="?attr/editTextColor"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/editMedikament3"
            style="@style/Widget.AppCompat.EditText.ConsulMedicsEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_edit_height"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:padding="@dimen/appbar_padding_top"
            android:textSize="@dimen/text_size_middle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:text="@string/receipt_details"
            android:textColor="?attr/editTextColor"
            android:textSize="@dimen/text_size_big" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/editFirstName"
                style="@style/Widget.AppCompat.EditText.ConsulMedicsEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_edit_height"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_weight="1"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/ic_user"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editLastName"
                style="@style/Widget.AppCompat.EditText.ConsulMedicsEditText"
                android:layout_width="match_parent"

                android:layout_height="@dimen/text_edit_height"
                android:layout_marginTop="@dimen/appbar_padding_top"
                android:layout_weight="1"
                android:background="@drawable/bg_edit_text"
                android:drawableLeft="@drawable/ic_user"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

        </LinearLayout>

        <EditText
            android:id="@+id/editAdditionalInfo"
            style="@style/Widget.AppCompat.EditText.ConsulMedicsEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_edit_height"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:background="@drawable/bg_edit_text"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/additional_details"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:padding="@dimen/appbar_padding_top"
            android:textSize="@dimen/text_size_middle" />


        <include
            android:id="@+id/addressForm"
            layout="@layout/form_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/appbar_padding"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:visibility="gone">


        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/back"
            android:textColor="@color/app_blue"
            android:textSize="@dimen/text_size_middle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnContinue"
            android:layout_width="200dp"
            android:layout_height="90dp"
            android:layout_marginLeft="@dimen/appbar_padding"
            android:layout_weight="1"
            android:backgroundTint="@color/app_blue"
            android:drawableRight="@drawable/ic_arrow_next"
            android:drawablePadding="0dp"
            android:paddingLeft="40dp"
            android:text="@string/btn_next"
            android:textSize="@dimen/text_size_middle" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>