<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">
<ScrollView
    tools:context=".fragments.addeditpatient.PatientDoctorSignFragment"
    android:id="@+id/activity_new_patient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@color/default_background"
    android:padding="@dimen/appbar_padding"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appbar_padding"
            android:text="@string/sign_patient"
            android:textColor="?attr/editTextColor"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="@dimen/appbar_padding_top"
            android:background="@drawable/layout_border"
            android:orientation="vertical"
            android:padding="@dimen/appbar_padding_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25">

            <ImageView
                android:id="@+id/signPatientImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>


    </LinearLayout>

</ScrollView>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="@dimen/appbar_padding"
android:layout_marginBottom="10dp"
android:orientation="horizontal">


<Space
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/btnBack"
    android:layout_width="200dp"
    android:layout_height="90dp"
    android:layout_weight="1"
    android:backgroundTint="@color/white"
    android:text="@string/back"
    android:textColor="@color/app_blue"
    android:textSize="@dimen/text_size_middle" />

<com.google.android.material.button.MaterialButton
    android:id="@+id/btnContinue"
    android:layout_width="200dp"
    android:layout_height="90dp"
    android:layout_marginLeft="@dimen/appbar_padding"
    android:layout_weight="1"
    android:backgroundTint="@color/app_blue"
    android:drawableRight="@drawable/ic_arrow_next"
    android:drawablePadding="0dp"
    android:paddingLeft="40dp"
    android:text="@string/btn_next"
    android:textSize="@dimen/text_size_middle" />

<Space
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1" />

</LinearLayout>
</LinearLayout>